Adding the infra for the CI/CD.

--- a/_publish.yml
+++ b/_publish.yml
@@ -1,4 +1,4 @@
 - source: project
   netlify:
-    - id: ebaf12d7-c0f8-4249-9c60-6849191a9bd8
-      url: 'https://linear.alg.notes.damoncroberts.com'
+    - id: c2515454-8867-486f-b993-57696a123ee1
+      url: "https://glowing-meerkat-7a0f41.netlify.app"
