--- a/_publish.yml
+++ b/_publish.yml
@@ -1,4 +1,4 @@
 - source: project
   netlify:
     - id: c2515454-8867-486f-b993-57696a123ee1
-      url: "https://glowing-meerkat-7a0f41.netlify.app"
+      url: "https://linalg.notes.damoncroberts.io"
